--- a/frontend/daily-recommendations.html
+++ b/frontend/daily-recommendations.html
@@ -492,7 +492,6 @@
 
         let filterForm;
         let tipsResultsContainer;
-        let filterStatusRegion;
 
         if (tipsSection) {
             const currentDate = dateKey();
@@ -545,7 +544,7 @@
                 baseNote = note;
                 desiredTipCount = desiredCount;
 
-                filterOptions = deriveFilterOptions(allTipsCache);
+                filterOptions = deriveFilterOptions(baseTips);
                 renderFilterControls();
 
                 currentRefreshCounter = Number.isFinite(refreshCounterOverride)
@@ -557,12 +556,10 @@
                 console.error('[daily-tips] Failed to initialize tips:', error);
                 if (tipsResultsContainer) {
                     renderTips([], tipsResultsContainer, {
-                        title: 'Personalized Daily Tips',
-                        subtitle: 'Tailored suggestions based on your questionnaire responses',
-                        note: 'Tips are temporarily unavailable. Please try again later.'
+                        note: 'Tips are temporarily unavailable. Please try again later.',
+                        showHeading: false
                     });
                 }
-                updateStatusMessage('Tips are temporarily unavailable. Please try again later.');
             }
         }
 
@@ -579,31 +576,28 @@
             const filteredTips = filtersApplied ? applyFilters(baseTips, activeFilters) : baseTips;
 
             let tipsForSelection = filteredTips;
-            let statusMessage;
+            let noteMessage = baseNote || '';
 
             if (filtersApplied) {
                 if (!filteredTips.length) {
-                    statusMessage = 'No tips matched your filters. Showing personalized recommendations instead.';
+                    noteMessage = 'No tips matched your filters. Showing personalized recommendations instead.';
                     tipsForSelection = baseTips;
                 } else {
-                    statusMessage = buildAppliedStatus(filteredTips.length);
+                    const appliedNote = buildFilterNote(filteredTips.length);
+                    noteMessage = baseNote ? `${appliedNote} • ${baseNote}` : appliedNote;
                 }
-            } else {
-                statusMessage = usingFallbackData
-                    ? 'Currently showing the default reminder.'
-                    : 'Currently showing personalized tips.';
+            } else if (!noteMessage && usingFallbackData) {
+                noteMessage = 'Currently showing the default reminder.';
             }
-
-            updateStatusMessage(statusMessage);
 
             const effectiveSeedCounter = computeEffectiveCounter(currentRefreshCounter, activeFilters);
             const picked = pickDailyTips(tipsForSelection, desiredTipCount, profileCache, effectiveSeedCounter);
 
             renderTips(picked, tipsResultsContainer, {
-                title: 'Personalized Daily Tips',
-                subtitle: 'Tailored suggestions based on your questionnaire responses',
-                note: baseNote,
-                refreshable: true
+                note: noteMessage || undefined,
+                refreshable: true,
+                showHeading: false,
+                refreshPosition: 'footer'
             });
 
             attachRefreshHandler();
@@ -625,6 +619,10 @@
         function initializeSectionSkeleton() {
             tipsSection.innerHTML = `
                 <div class="section-container">
+                    <div class="tips-heading">
+                        <h2 class="section-title">Personalized Daily Tips</h2>
+                        <p class="section-subtitle">Tailored suggestions based on your questionnaire responses</p>
+                    </div>
                     <div class="tips-filter-wrapper">
                         <form class="tips-filter-form" aria-label="Filter daily tips">
                             <fieldset class="tips-filter-group">
@@ -645,7 +643,6 @@
                             </div>
                         </form>
                         <p class="tips-filter-hint">Choose categories or types to explore different themes. Filters do not change your questionnaire results.</p>
-                        <div class="tips-filter-status" aria-live="polite" role="status"></div>
                     </div>
                     <div class="tips-results">
                         <div class="tips-loading" role="status">
@@ -657,7 +654,6 @@
 
             filterForm = tipsSection.querySelector('.tips-filter-form');
             tipsResultsContainer = tipsSection.querySelector('.tips-results');
-            filterStatusRegion = tipsSection.querySelector('.tips-filter-status');
 
             if (filterForm) {
                 filterForm.addEventListener('submit', handleFilterSubmit);
@@ -780,7 +776,7 @@
             return (counter || 0) ^ filterHash;
         }
 
-        function buildAppliedStatus(matchCount) {
+        function buildFilterNote(matchCount) {
             const parts = [];
 
             if (activeFilters.categories.length) {
@@ -791,8 +787,9 @@
                 parts.push(`Type: ${formatSelectionList(activeFilters.types, filterOptions.types)}`);
             }
 
-            const filtersText = parts.join('; ') || 'Filters applied';
-            return `${filtersText}; ${matchCount} tips available.`;
+            const filtersText = parts.join(' • ') || 'Filters applied';
+            const matchText = `${matchCount} ${matchCount === 1 ? 'tip' : 'tips'} available`;
+            return `${filtersText} • ${matchText}.`;
         }
 
         function formatSelectionList(values, options) {
@@ -806,11 +803,6 @@
             return labels.join(', ');
         }
 
-        function updateStatusMessage(message) {
-            if (!filterStatusRegion) return;
-            filterStatusRegion.textContent = message || '';
-        }
-
         function setLoadingState() {
             if (!tipsResultsContainer) return;
             tipsResultsContainer.innerHTML = `
@@ -818,7 +810,6 @@
                     <span class="tips-loading-text">Loading personalized tips...</span>
                 </div>
             `;
-            updateStatusMessage('Loading personalized tips...');
         }
 
         function deriveFilterOptions(tips) {
