--- a/frontend/daily-recommendations.html
+++ b/frontend/daily-recommendations.html
@@ -544,7 +544,8 @@
                 baseNote = note;
                 desiredTipCount = desiredCount;
 
-                filterOptions = deriveFilterOptions(baseTips);
+                // Derive filter options from ALL tips, not just personalized ones
+                filterOptions = deriveFilterOptions(allTipsCache);
                 renderFilterControls();
 
                 currentRefreshCounter = Number.isFinite(refreshCounterOverride)
@@ -573,18 +574,22 @@
             }
 
             const filtersApplied = hasActiveFilters();
-            const filteredTips = filtersApplied ? applyFilters(baseTips, activeFilters) : baseTips;
+
+            // When filters are applied, search in ALL tips to allow exploring beyond personalized results
+            // When no filters, use personalized baseTips
+            const sourceForFiltering = filtersApplied ? allTipsCache : baseTips;
+            const filteredTips = filtersApplied ? applyFilters(sourceForFiltering, activeFilters) : baseTips;
 
             let tipsForSelection = filteredTips;
             let noteMessage = baseNote || '';
 
             if (filtersApplied) {
                 if (!filteredTips.length) {
-                    noteMessage = 'No tips matched your filters. Showing personalized recommendations instead.';
+                    noteMessage = 'No tips match your filters. Showing personalized recommendations instead.';
                     tipsForSelection = baseTips;
                 } else {
                     const appliedNote = buildFilterNote(filteredTips.length);
-                    noteMessage = baseNote ? `${appliedNote} • ${baseNote}` : appliedNote;
+                    noteMessage = appliedNote;
                 }
             } else if (!noteMessage && usingFallbackData) {
                 noteMessage = 'Currently showing the default reminder.';
@@ -626,23 +631,23 @@
                     <div class="tips-filter-wrapper">
                         <form class="tips-filter-form" aria-label="Filter daily tips">
                             <fieldset class="tips-filter-group">
-                                <legend>Filter by Category</legend>
+                                <legend>Filter by Category <span class="filter-hint-inline">(Choose topics)</span></legend>
                                 <div class="tips-filter-options tips-filter-options--category" role="group" aria-label="Filter by category">
                                     <p class="tips-filter-empty">Loading categories...</p>
                                 </div>
                             </fieldset>
                             <fieldset class="tips-filter-group">
-                                <legend>Filter by Type</legend>
+                                <legend>Filter by Type <span class="filter-hint-inline">(Nutrition or Lifestyle)</span></legend>
                                 <div class="tips-filter-options tips-filter-options--type" role="group" aria-label="Filter by type">
                                     <p class="tips-filter-empty">Loading types...</p>
                                 </div>
                             </fieldset>
                             <div class="tips-filter-actions">
-                                <button type="submit" class="btn btn-primary tips-filter-apply">Apply</button>
-                                <button type="button" class="btn btn-secondary tips-filter-clear" data-clear-filters>Clear</button>
+                                <button type="submit" class="btn btn-primary tips-filter-apply" aria-label="Apply selected filters to daily tips">Apply Filters</button>
+                                <button type="button" class="btn btn-secondary tips-filter-clear" data-clear-filters aria-label="Clear all filters and show personalized recommendations">Clear Filters</button>
                             </div>
                         </form>
-                        <p class="tips-filter-hint">Choose categories or types to explore different themes. Filters do not change your questionnaire results.</p>
+                        <p class="tips-filter-hint" role="status" aria-live="polite" aria-atomic="true">Choose categories or types to explore different themes. Filters do not change your questionnaire results.</p>
                     </div>
                     <div class="tips-results">
                         <div class="tips-loading" role="status">
@@ -787,9 +792,7 @@
                 parts.push(`Type: ${formatSelectionList(activeFilters.types, filterOptions.types)}`);
             }
 
-            const filtersText = parts.join(' • ') || 'Filters applied';
-            const matchText = `${matchCount} ${matchCount === 1 ? 'tip' : 'tips'} available`;
-            return `${filtersText} • ${matchText}.`;
+            return parts.length > 0 ? `${parts.join(' - ')}.` : 'Filters applied.';
         }
 
         function formatSelectionList(values, options) {
@@ -900,8 +903,13 @@
         function formatLabel(value) {
             const str = String(value || '');
             if (!str) return 'General';
+
+            // Replace underscores with spaces and capitalize each word
             const cleaned = str.replace(/_/g, ' ');
-            return cleaned.charAt(0).toUpperCase() + cleaned.slice(1);
+            return cleaned
+                .split(' ')
+                .map(word => word.charAt(0).toUpperCase() + word.slice(1).toLowerCase())
+                .join(' ');
         }
 
         function hashString(str) {
