--- a/frontend/home.html
+++ b/frontend/home.html
@@ -187,7 +187,7 @@
             </div>
             -->
             
-            <button class="mobile-menu-btn" aria-label="Toggle mobile menu" aria-expanded="false">
+            <button class="mobile-menu-btn" aria-label="Toggle mobile menu">
                 <i class="fas fa-bars"></i>
             </button>
         </div>
@@ -337,14 +337,6 @@
             }
             
             lastScrollTop = scrollTop;
-        });
-
-        // Mobile menu toggle
-        const mobileMenuBtn = document.querySelector('.mobile-menu-btn');
-        const navLinks = document.querySelector('.nav-links');
-
-        mobileMenuBtn.addEventListener('click', function() {
-            navLinks.classList.toggle('show');
         });
 
         // Smooth scroll to sections
