--- a/frontend/seasonal-produce.html
+++ b/frontend/seasonal-produce.html
@@ -53,7 +53,7 @@
                 </a>
             </div>
 
-            <button class="mobile-menu-btn" aria-label="Toggle mobile menu" aria-expanded="false">
+            <button class="mobile-menu-btn" aria-label="Toggle mobile menu">
                 <i class="fas fa-bars"></i>
             </button>
         </div>
@@ -306,16 +306,6 @@
                 renderVegetablesList();
             });
 
-            // Mobile menu toggle
-            const mobileMenuBtn = document.querySelector('.mobile-menu-btn');
-            const navLinks = document.querySelector('.nav-links');
-            if (mobileMenuBtn && navLinks) {
-                mobileMenuBtn.addEventListener('click', function() {
-                    const isExpanded = this.getAttribute('aria-expanded') === 'true';
-                    this.setAttribute('aria-expanded', !isExpanded);
-                    navLinks.classList.toggle('show');
-                });
-            }
         }
 
         // Update season button display
