fix bugs like unfunctional button and wrong information

--- a/frontend/explore-recipes.html
+++ b/frontend/explore-recipes.html
@@ -112,9 +112,9 @@
                                 <i class="fas fa-bacon"></i>
                                 <span>Pork</span>
                             </button>
-                            <button class="filter-chip" data-chip="seafood" aria-pressed="false">
+                            <button class="filter-chip" data-chip="fish" aria-pressed="false">
                                 <i class="fas fa-fish"></i>
-                                <span>Seafood</span>
+                                <span>Fish</span>
                             </button>
                             <button class="filter-chip" data-chip="shellfish" aria-pressed="false">
                                 <i class="fas fa-shrimp"></i>
