fix the nav bar order problem

--- a/frontend/home.html
+++ b/frontend/home.html
@@ -125,7 +125,7 @@
     <section class="welcome-section" id="welcome">
         <div class="welcome-card" role="region" aria-labelledby="welcome-heading">
             <h1 class="welcome-title">Welcome to Silver Spoon Society</h1>
-            <p class="welcome-sub">Designed for healthy eating, our recipes and nutrition tools are easy to use and suitable for long-term use.</p>
+            <p class="welcome-sub">Designed for healthy eating for the elderly, our recipes and nutrition tools are easy to use and suitable for long-term use.</p>
             <a href="#home" class="welcome-btn" aria-label="Get Started">
                 <i class="fas fa-arrow-down"></i>
                 Get Started
