--- a/netlify-deploy/nutrition-dashboard.html
+++ b/netlify-deploy/nutrition-dashboard.html
@@ -33,13 +33,9 @@
                     <i class="fas fa-search"></i>
                     <span>Recipes</span>
                 </a>
-                <a href="nutrition-dashboard.html" class="nav-link active">
-                    <i class="fas fa-chart-line"></i>
-                    <span>Dashboard</span>
-                </a>
-                <a href="daily-recommendations.html" class="nav-link">
-                    <i class="fas fa-heart"></i>
-                    <span>Daily Tips</span>
+                <a href="seasonal-produce.html" class="nav-link">
+                    <i class="fas fa-leaf"></i>
+                    <span>Seasonal</span>
                 </a>
                 <a href="meal-planning.html" class="nav-link">
                     <i class="fas fa-calendar-alt"></i>
@@ -48,6 +44,14 @@
                 <a href="shopping-list.html" class="nav-link">
                     <i class="fas fa-shopping-cart"></i>
                     <span>Shopping</span>
+                </a>
+                <a href="nutrition-dashboard.html" class="nav-link active">
+                    <i class="fas fa-chart-line"></i>
+                    <span>Dashboard</span>
+                </a>
+                <a href="daily-recommendations.html" class="nav-link">
+                    <i class="fas fa-heart"></i>
+                    <span>Daily Tips</span>
                 </a>
             </div>
             
@@ -90,7 +94,6 @@
             <div class="section-container">
                 <h1 class="page-title"><i class="fas fa-chart-line"></i> Nutrition Dashboard</h1>
                 <p class="page-subtitle">Track your daily nutrition intake and monitor your health goals</p>
-                <p class="page-description">Track your daily nutrition goals at a glance</p>
             </div>
         </section>
 
@@ -172,47 +175,47 @@
                     <div class="nutrition-card">
                         <div class="card-header">
                             <div class="card-icon">
-                                <i class="fas fa-bread-slice"></i>
+                                <i class="fas fa-bone"></i>
                             </div>
                             <div class="card-title">
-                                <h3>Carbohydrates</h3>
+                                <h3>Calcium</h3>
                                 <span class="status-tag low">low</span>
                             </div>
                         </div>
                         <div class="card-value">
-                            <span class="current-value" id="carbohydrates-current">0</span>
+                            <span class="current-value" id="calcium-current">0</span>
                             <span class="separator">/</span>
-                            <span class="goal-value" id="carbohydrates-goal">130</span>
-                            <span class="unit">g</span>
+                            <span class="goal-value" id="calcium-goal">1200</span>
+                            <span class="unit">mg</span>
                         </div>
-                        <p class="card-description">Energy from carbs</p>
+                        <p class="card-description">Bone health & strength</p>
                         <div class="card-progress">
                             <div class="progress-bar">
-                                <div class="progress-fill" style="width: 27%"></div>
+                                <div class="progress-fill" style="width: 0%"></div>
                             </div>
                         </div>
                     </div>
-                    
+
                     <div class="nutrition-card">
                         <div class="card-header">
                             <div class="card-icon">
-                                <i class="fa-solid fa-flask"></i>
+                                <i class="fas fa-sun"></i>
                             </div>
                             <div class="card-title">
-                                <h3>Sodium</h3>
+                                <h3>Vitamin D</h3>
                                 <span class="status-tag low">low</span>
                             </div>
                         </div>
                         <div class="card-value">
-                            <span class="current-value" id="sodium-current">0</span>
+                            <span class="current-value" id="vitamin_d-current">0</span>
                             <span class="separator">/</span>
-                            <span class="goal-value" id="sodium-goal">2300</span>
-                            <span class="unit">mg</span>
+                            <span class="goal-value" id="vitamin_d-goal">600</span>
+                            <span class="unit">IU</span>
                         </div>
-                        <p class="card-description">Sodium (recipe-sourced)</p>
+                        <p class="card-description">Calcium absorption & bone health</p>
                         <div class="card-progress">
                             <div class="progress-bar">
-                                <div class="progress-fill" style="width: 25%"></div>
+                                <div class="progress-fill" style="width: 0%"></div>
                             </div>
                         </div>
                     </div>
@@ -225,11 +228,29 @@
             <div class="section-container">
                 <div class="goals-container">
                     <div class="goals-header">
-                        <h2><i class="fas fa-bullseye"></i> Today's Goals</h2>
+                        <h2><i class="fas fa-bullseye"></i> Nutrition Dashboard</h2>
                     </div>
 
-                    <!-- Left: goals-list, Right: meals-added-section -->
-                    <div class="goals-row">
+                    <!-- Tab Navigation -->
+                    <div class="dashboard-tabs">
+                        <button class="dashboard-tab active" data-tab="daily-tracking">
+                            <i class="fas fa-calendar-day"></i> Daily Tracking
+                        </button>
+                        <button class="dashboard-tab" data-tab="weekly-plan">
+                            <i class="fas fa-calendar-week"></i> Weekly Meal Plan
+                        </button>
+                    </div>
+
+                    <!-- Tab Content Container -->
+                    <div class="dashboard-tab-content">
+                        <!-- Tab 1: Daily Tracking -->
+                        <div id="daily-tracking" class="dashboard-tab-panel active">
+                            <div class="tab-panel-header">
+                                <h3><i class="fas fa-bullseye"></i> Today's Goals</h3>
+                            </div>
+
+                            <!-- Left: goals-list, Right: meals-added-section -->
+                            <div class="goals-row">
                         <div class="goals-list">
                             <section>
                                 <div class="section-container">
@@ -237,15 +258,6 @@
                                     <div id="dashboard-nutrition"></div>
                                 </div>
                             </section>
-
-                            <div class="health-tip-container">
-                                <div class="health-tip-header">
-                                    <h2><i class="fas fa-heart"></i> Today's Health Tip</h2>
-                                </div>
-                                <div class="health-tip-content">
-                                    <p><strong>Tracking Tip:</strong> Remember to log all your meals and snacks throughout the day. Even small items like a piece of fruit or handful of nuts contribute to your daily nutrition goals. Consistent logging helps you build healthier eating habits!</p>
-                                </div>
-                            </div>
                         </div>
 
                         <!-- Today's Meals Added -->
@@ -262,6 +274,28 @@
                                 </ul>
                             </div>
                         </aside>
+                    </div>
+                        </div>
+                        <!-- End Tab 1: Daily Tracking -->
+
+                        <!-- Tab 2: Weekly Meal Plan -->
+                        <div id="weekly-plan" class="dashboard-tab-panel">
+                            <div id="weekly-plan-content">
+                                <!-- Will be populated by JavaScript -->
+                            </div>
+                        </div>
+                        <!-- End Tab 2: Weekly Meal Plan -->
+                    </div>
+                    <!-- End Tab Content Container -->
+                </div>
+
+                <!-- Today's Health Tip (moved outside goals-container) -->
+                <div class="health-tip-container">
+                    <div class="health-tip-header">
+                        <h2><i class="fas fa-heart"></i> Today's Health Tip</h2>
+                    </div>
+                    <div class="health-tip-content">
+                        <p><strong>Tracking Tip:</strong> Remember to log all your meals and snacks throughout the day. Even small items like a piece of fruit or handful of nuts contribute to your daily nutrition goals. Consistent logging helps you build healthier eating habits!</p>
                     </div>
                 </div>
             </div>
