--- a/frontend/index.html
+++ b/frontend/index.html
@@ -136,7 +136,7 @@
 	<!-- Navigation Bar -->
     <nav class="navbar">
         <div class="nav-container">
-            <a href="home.html" class="nav-logo">
+            <a href="index.html" class="nav-logo">
                 <div class="logo-icon">
                     <img src="SliverSpoonSociety_Logo.jpg" alt="Silver Spoon Society Logo" class="custom-logo">
                 </div>
@@ -146,7 +146,7 @@
             </a>
             
             <div class="nav-links">
-                <a href="home.html" class="nav-link active">
+                <a href="index.html" class="nav-link active">
                     <i class="fas fa-home"></i>
                     <span>Home</span>
                 </a>
