--- a/frontend/seasonal-produce.html
+++ b/frontend/seasonal-produce.html
@@ -23,7 +23,7 @@
             </a>
 
             <div class="nav-links">
-                <a href="home.html" class="nav-link">
+                <a href="index.html" class="nav-link">
                     <i class="fas fa-home"></i>
                     <span>Home</span>
                 </a>
