--- a/frontend/shopping-list.html
+++ b/frontend/shopping-list.html
@@ -15,7 +15,7 @@
     <!-- Navigation Bar -->
     <nav class="navbar">
         <div class="nav-container">
-            <a href="home.html" class="nav-logo">
+            <a href="index.html" class="nav-logo">
                 <div class="logo-icon">
                     <!-- Logo image -->
                     <img src="SliverSpoonSociety_Logo.jpg" alt="Silver Spoon Society Logo" class="custom-logo">
@@ -25,7 +25,7 @@
                 </div>
             </a>
             <div class="nav-links">
-                <a href="home.html" class="nav-link">
+                <a href="index.html" class="nav-link">
                     <i class="fas fa-home"></i>
                     <span>Home</span>
                 </a>
