update deploy file

--- a/netlify-deploy/index.html
+++ b/netlify-deploy/index.html
@@ -136,7 +136,7 @@
 	<!-- Navigation Bar -->
 	<nav class="navbar">
 		<div class="nav-container">
-			<a href="home.html" class="nav-logo">
+			<a href="index.html" class="nav-logo">
 				<div class="logo-icon">
 					<img src="SliverSpoonSociety_Logo.jpg" alt="Silver Spoon Society Logo" class="custom-logo">
 				</div>
