update some small feature for user experience

--- a/frontend/daily-recommendations.html
+++ b/frontend/daily-recommendations.html
@@ -231,8 +231,7 @@
             <div class="section-container">
                 <div class="weekly-focus-card">
                     <div class="focus-header">
-                        <h2>This Week's Focus: Bone Health</h2>
-                        <div class="focus-badge">Week 3 of 4</div>
+                        <h2>This Month's Focus: Bone Health</h2>
                     </div>
                     <div class="focus-content">
                         <div class="focus-description">
