--- a/frontend/index.html
+++ b/frontend/index.html
@@ -125,7 +125,7 @@
 	<section class="welcome-section" id="welcome">
 		<div class="welcome-card" role="region" aria-labelledby="welcome-heading">
 			<h1 class="welcome-title">Welcome to Silver Spoon Society</h1>
-			<p class="welcome-sub">Designed for healthy eating for the elderly, our recipes and nutrition tools are easy to use and suitable for long-term use.</p>
+			<p class="welcome-sub">Designed for healthy eating, our recipes and nutrition tools are easy to use and suitable for long-term use.</p>
 			<a href="#home" class="welcome-btn" aria-label="Get Started">
 				<i class="fas fa-arrow-down"></i>
 				Get Started
@@ -145,36 +145,36 @@
                 </div>
             </a>
             
-            <div class="nav-links">
-                <a href="index.html" class="nav-link active">
-                    <i class="fas fa-home"></i>
-                    <span>Home</span>
-                </a>
-                <a href="explore-recipes.html" class="nav-link">
-                    <i class="fas fa-search"></i>
-                    <span>Recipes</span>
-                </a>
-                <a href="seasonal-produce.html" class="nav-link">
-                    <i class="fas fa-leaf"></i>
-                    <span>Seasonal</span>
-                </a>
-                <a href="meal-planning.html" class="nav-link">
-                    <i class="fas fa-calendar-alt"></i>
-                    <span>Planning</span>
-                </a>
-                <a href="shopping-list.html" class="nav-link">
-                    <i class="fas fa-shopping-cart"></i>
-                    <span>Shopping</span>
-                </a>
-                <a href="nutrition-dashboard.html" class="nav-link">
-                    <i class="fas fa-chart-line"></i>
-                    <span>Dashboard</span>
-                </a>
-                <a href="daily-recommendations.html" class="nav-link">
-                    <i class="fas fa-heart"></i>
-                    <span>Daily Tips</span>
-                </a>
-            </div>
+			<div class="nav-links">
+				<a href="#welcome" class="nav-link">
+					<i class="fas fa-home"></i>
+					<span>Home</span>
+				</a>
+				<a href="explore-recipes.html" class="nav-link">
+					<i class="fas fa-search"></i>
+					<span>Recipes</span>
+				</a>
+				<a href="nutrition-dashboard.html" class="nav-link">
+					<i class="fas fa-chart-line"></i>
+					<span>Dashboard</span>
+				</a>
+				<a href="daily-recommendations.html" class="nav-link">
+					<i class="fas fa-heart"></i>
+					<span>Daily Tips</span>
+				</a>
+				<a href="meal-planning.html" class="nav-link">
+					<i class="fas fa-calendar-alt"></i>
+					<span>Planning</span>
+				</a>
+				<a href="shopping-list.html" class="nav-link">
+					<i class="fas fa-shopping-cart"></i>
+					<span>Shopping</span>
+				</a>
+				<a href="seasonal-produce.html" class="nav-link">
+					<i class="fas fa-leaf"></i>
+					<span>Seasonal</span>
+				</a>
+			</div>
 			
 			<!--
 			<div class="nav-right">
